# TNJIndex

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
.github/workflows/: deploy.yml
backend/: __init__.py  deps.py  main.py  path_urls.py  schemas.py
backend/routers/: items.py  search.py  tags.py
docs/: README.md  glossary.md  intro_to_tnjinex.md
docs/architecture/: tech_design.md
docs/mvp/: 00_roadmap.md  01_data_foundation.md  02_annotation_index.md  03_product_design.md  04_mvp_launch.md  05_ux_and_search.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DetailModal.tsx  ImageCard.tsx  MasonryGrid.tsx  SearchBar.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/hooks/: useInfiniteScroll.ts  useSearch.ts
frontend/src/lib/: api.ts
pipelines/: __init__.py  annotate.py  annotate_known_failures_m3.txt  annotation_validate.py  app.py  batch_utils.py  clip_embed.py  clip_embed_all.py  constants.py  embed.py  embed_client.py  eval_memo.md  eval_queries.txt  migrate_to_oss.py  paths.py  prompts.py  search.py  search_cli.py  sqlite_vec.py  vec_smoke.py  vision_client.py  vision_eval.py
pipelines/templates/: index.html
scrapers/: db.py  ingest.py  kym.py  tieba_blur_corner.py  tieba_fetch.py
